--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,37 @@
+
+
 body {
   display: flex;
   justify-content: center;
+
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  height: 500px;
 }
 
 .converter {
   display: flex;
   align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .arrow {
-  font-size: 30px;
-  padding: 0px 10px;
+  font-size: 40px;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+.rates {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 480px;
 }
